objects/Document_Template__c.object
<CustomObject>
    <fields>
        <fullName>Case_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Task Template on whose creation this Document should be generated automatically.</description>
        <label>Case Template</label>
        <referenceTo>Case_Template__c</referenceTo>
        <relationshipLabel>Document Templates</relationshipLabel>
        <relationshipName>Document_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Document_Name__c</fullName>
        <description>Name of the Document which will be generated based on this template, this can be merge template also in case of repetitive documents this can allow to use array from parent.</description>
        <label>Document Name</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <description>Type of the Document to be Created</description>
        <label>Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Versioned</fullName>
                </value>
                <value>
                    <fullName>Multiple Files</fullName>
                </value>
                <value>
                    <fullName>Multiple Versioned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Extensions_Allowed__c</fullName>
        <description>Coma separated list of extensions which are allowed on the Document generated by this Template.</description>
        <label>Extensions Allowed</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lookup_Field__c</fullName>
        <description>API Name of the Lookup field to be used.</description>
        <label>Lookup Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account__c</fullName>
                </value>
                <value>
                    <fullName>Opportunity__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <description>Object on which Document to be created. Lookup of the Object with same name must exist on the Document.</description>
        <label>Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent Document Template in case of Hierarchical Template</description>
        <label>Parent</label>
        <referenceTo>Document_Template__c</referenceTo>
        <relationshipLabel>Document Templates</relationshipLabel>
        <relationshipName>Document_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <description>This is a Document structure used to Auto Generate Document structure on certain events or Task creation.</description>
    <label>Document Template</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Document_Name__c</columns>
        <columns>Document_Type__c</columns>
        <columns>Extensions_Allowed__c</columns>
        <columns>Object__c</columns>
        <columns>Lookup_Field__c</columns>
        <columns>Parent__c</columns>
        <columns>Case_Template__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>